--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
 	body {
-		@apply overflow-y-scroll;
+		@apply scrollbar-thin scrollbar-thumb-blue-700 scrollbar-track-blue-300 overflow-y-scroll;
 	}
 	html {
 		@apply font-Inconsolata;
